# azostream-o

./: .gitignore  README.md  WORKSPACE.bazel
.github/workflows/: ci.yml
projects/api/: BUILD.bazel  main.go  main_test.go
